<resources>
    <string name="app_name">ProjetoEscalaAndroid</string>
    <string name="e_mail_edit">E-mail</string>
    <string name="ed_senha">Senha</string>
    <string name="faca_login_usando">FAÇA LOGIN USANDO</string>
    <string name="politica_de_privacidade">Politica de Privacidade</string>
    <string name="text_usabilidade">Usabilidade e praticidade</string>
    <string name="text_use_ebanca">Use o E-Banca em qualquer dispositivo, leia de qualquer lugar e quando quiser</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="confirma_email">Confirmação de e-mail</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="confirma_senha">Confirmação de Senha</string>
    <string name="criar_conta_cad">Criar Conta</string>
    <string name="btn_logar">Logar</string>
    <string name="naville_brasil_nav">Naville Brasil</string>
    <string name="edicao_atual">Edição Atual</string>
    <string name="clube_do_assinante">Clube do Assinante</string>
    <string name="atendimento_ao_leitor">Atendimento ao Leitor</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="item_4">Item 4</string>
    <string name="item_5">Item 5</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="minha_banca">Minha Banca</string>
    <string name="categorias">Categorias</string>
    <string name="titulos">Títulos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ler_edicao_mes">LER EDIÇÃO DO MÊS</string>
    <string name="ler_edicoes_anteriores">LER EDIÇÕES ANTERIORES</string>
    <string name="conteudo_online">CONTEÚDO ONLINE</string>
    <string name="texto_edicao_detale">A revista Corpo a Corpo traz nesta edição Patrícia Poeta! Ensina o segredo para secar e não engordar mais.</string>
    <string name="ler_edicao">LER EDIÇÃO</string>
    <string name="sos_verao">SOS versão! -3KG por semana! Com dieta alcalina + exercícios que modelam a barriga, os braços...</string>
    <string name="texto_coco">O poder do coco! Receitas para eliminar peso e aumentar os músculos.</string>
    <string name="texto_imagem_pe">Não perca o pique durante as férias! Treino com elástico (faça em qualquer lugar) e o jeito certo de adaptar seu esporte para a praia.</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_lancamentos">Lançamentos</string>
    <string name="tab_minha_banca">Minha Banca</string>
    <string name="tab_categorias">Categorias</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_titulos">Títulos</string>
    <string name="cadastre_se"><u>Cadastre-se</u></string>

    <string name="facebook_app_id">1814075425325664</string>
    <string name="fb_login_protocol_scheme">fb1814075425325664</string>
    <string name="ainda_n_o_tem_cadastro">Ainda não tem Cadastro?</string>
    <string name="navegue_gratis">NAVEGUE GRÁTIS</string>
    <string name="entrar_nav_free_"><u>Entrar</u></string>
    <string name="como_podemos_te_ajudar">Como podemos te ajudar?</string>
    <string name="texto_descricao_contato">Mas antes, para que possamos te identificar e solucionar sua dúvida ou problema com maior facilidade, nos diga:</string>
    <string name="assinante">É assinante</string>
    <string name="n_o_assinante_ainda">Não é assinante ainda</string>
    <string name="qual_o_seu_nome">Qual o seu Nome?</string>
    <string name="qual_o_seu_e_mail">Qual o seu e-mail?</string>
    <string name="diga_sua_duvida">Agora sim nos diga, qual sua dúvida ou problema?</string>
    <string name="digite_aqui_a_sua_d_vida">Digite aqui a sua dúvida</string>

</resources>
