<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarId"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorToolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <ImageView
        android:id="@+id/img_logo_toolbar"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbarId"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:elevation="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarId"
        app:tabBackground="@drawable/background_selector"
        app:tabIndicatorColor="@android:color/white"
        app:tabMode="scrollable"
        app:tabTextAppearance="@style/CustomTextStyle"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@color/colorPrimary">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:elevation="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/tab_lancamentos" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:elevation="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:text="@string/tab_minha_banca" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem3"
            android:elevation="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:text="@string/tab_categorias" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem4"
            android:elevation="4dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_titulos" />

    </android.support.design.widget.TabLayout>


</android.support.constraint.ConstraintLayout>





    <!--<com.astuetz.PagerSlidingTabStrip-->
    <!--android:id="@+id/tabs"-->
    <!--app:pstsShouldExpand="true"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="48dp"-->
    <!--android:textSize="14sp"-->
    <!--android:textColor="@android:color/white"-->
    <!--app:pstsDividerColor="@color/colorPrimary"-->
    <!--app:pstsIndicatorColor="@color/colorPrimary"-->
    <!--app:pstsUnderlineColor="@android:color/white"-->
    <!--app:pstsTabPaddingLeftRight="14dp">-->
    <!--</com.astuetz.PagerSlidingTabStrip>-->
