<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include2"
            layout="@layout/toolbar_revista" />

        <ImageView
            android:id="@+id/image_edicao_detalhe_id"
            android:layout_width="164dp"
            android:layout_height="225dp"
            android:layout_marginEnd="180dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/foto_corpo_corpo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include2" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="143dp"
            android:layout_height="72dp"
            android:layout_marginEnd="22dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/texto_edicao_detale"
            android:textColor="#555555"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_edicao_detalhe_id"
            app:layout_constraintTop_toBottomOf="@+id/include2" />

        <Button
            android:id="@+id/btn_ler_edicao_mes_detalhe_id"
            android:layout_width="148dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_edicao_mes"
            android:textColor="@android:color/white"
            android:text="@string/ler_edicao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_edicao_detalhe_id"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <ImageView
            android:id="@+id/imagem_praia_id"
            android:layout_width="164dp"
            android:layout_height="80dp"
            android:layout_marginEnd="180dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/foto_praia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_edicao_detalhe_id" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="132dp"
            android:layout_height="74dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="132dp"
            android:fontFamily="sans-serif"
            android:text="@string/sos_verao"
            android:textColor="#555555"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagem_coco_id"
            app:layout_constraintTop_toBottomOf="@+id/btn_ler_edicao_mes_detalhe_id" />

        <ImageView
            android:id="@+id/imagem_coco_id"
            android:layout_width="164dp"
            android:layout_height="80dp"
            android:layout_marginEnd="180dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/foto_coco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagem_praia_id" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="139dp"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif"
            android:text="@string/texto_coco"
            android:textColor="#555555"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagem_coco_id"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <ImageView
            android:id="@+id/imagem_pe_id"
            android:layout_width="164dp"
            android:layout_height="80dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="180dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/foto_pe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagem_coco_id" />

        <TextView
            android:layout_width="145dp"
            android:layout_height="80dp"
            android:layout_marginBottom="43dp"
            android:layout_marginEnd="19dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="54dp"
            android:fontFamily="sans-serif"
            android:text="@string/texto_imagem_pe"
            android:textColor="#555555"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagem_pe_id"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintVertical_bias="0.0" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>