<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.AtendimentoLeitorActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include4"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/como_podemos_te_ajudar"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include4" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/texto_descricao_contato"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <RadioGroup
            android:id="@+id/radio_group_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18">

            <RadioButton
                android:id="@+id/radio_assinante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="10dp"
                android:text="@string/assinante"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/radio_nao_assinante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/n_o_assinante_ainda"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />


        </RadioGroup>


        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/qual_o_seu_nome"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_id" />

        <EditText
            android:id="@+id/edt_name_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/background_txt_ajuda_leitor"
            android:ems="10"
            android:hint="Nome"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.241"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView34" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/qual_o_seu_e_mail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_name_reader" />


        <EditText
            android:id="@+id/edt_email_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/background_txt_ajuda_leitor"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/diga_sua_duvida"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_reader" />

        <EditText
            android:id="@+id/edt_digite_duvida"
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/background_txt_ajuda_leitor"
            android:ems="10"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:gravity="start"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_enviar_dados"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <Button
            android:id="@+id/btn_enviar_dados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_enviar_duvida"
            android:layout_marginEnd="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="220dp"
            android:text="Enviar"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_phone_in_talk_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_enviar_dados" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginEnd="110dp"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="Atendimento ao Leitor
       (11)3855-2117"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_enviar_dados" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>