<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        android:id="@+id/linearLayout3"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/linear_view_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/background_linear_apresentacao"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_lancamentos"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/background_blue_apresentacao"
                android:gravity="center"
                android:padding="5dp"
                android:text="Lançamentos"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/text_minha_banca"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/background_blue_apresentacao"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/minha_banca"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/text_categorias"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/background_blue_apresentacao"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/categorias"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/text_titulos"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.6"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/titulos"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_frag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>


    </LinearLayout>

<!--<ImageView-->
<!--android:id="@+id/imageView12"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_marginEnd="8dp"-->
<!--android:layout_marginLeft="8dp"-->
<!--android:layout_marginRight="8dp"-->
<!--android:layout_marginStart="8dp"-->
<!--android:layout_marginTop="68dp"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintHorizontal_bias="0.111"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toBottomOf="@+id/imageView11"-->
<!--app:srcCompat="@mipmap/ic_launcher_round" />-->

<!--<ImageView-->
<!--android:id="@+id/imageView13"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_marginEnd="8dp"-->
<!--android:layout_marginLeft="8dp"-->
<!--android:layout_marginRight="8dp"-->
<!--android:layout_marginStart="8dp"-->
<!--android:layout_marginTop="60dp"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintHorizontal_bias="0.111"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toBottomOf="@+id/imageView12"-->
<!--app:srcCompat="@mipmap/ic_launcher_round" />-->
